<resources>
    <string name="app_name">TaskTimer2022</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menumain_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_settings">settings</string>
    <string name="menmain_showAbout">About Task Timer</string>
    <string name="menumain_generate">Generate Data</string>
    <string name="edit_button_description">Button to edit task details.</string>
    <string name="delete_button_description">" Button to delete tasks"</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_task_description_hint">Task description: (Optional)</string>
    <string name="addedit_save_button">save</string>
    <string name="addedit_sortorder">0</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="no_task_message">No Task Selected.</string>
    <string name="tli_description_null_text">
        Use the add button (+) in the toolbar above to create new tasks.
        &#10;&#10; Tasks with lower sort orders will be placed higher up the list.
        Task with the same sort order will be sorted alphabetically.
        &#10;&#10; Tapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed
        &#10;&#10; Each task has Edit and Delete buttons if you want to change the details or remove the task.
    </string>
    <string name="tli_name_null_text">Instructions</string>
</resources>