<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/content_add_edit"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintBottom_toBottomOf="parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/addedit_name"
            tools:text="@string/addedit_name_hint" android:maxLength="64"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:inputType="textNoSuggestions"
            android:minHeight="48dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/addedit_description"
            android:maxLength="256" app:layout_constraintTop_toBottomOf="@+id/addedit_name"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:minHeight="48dp"
            tools:text="@string/addedit_task_description_hint"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/addedit_sortorder"
            tools:text="@string/addedit_sortorder" android:maxLength="9"
            app:layout_constraintTop_toBottomOf="@+id/addedit_description"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:minHeight="48dp"/>
    <Button
            android:text="@string/addedit_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/addedit_save"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addedit_sortorder"
            android:layout_marginTop="16dp" android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawableStart="@android:drawable/ic_menu_save"/>
</androidx.constraintlayout.widget.ConstraintLayout>